--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Navbar Moderna com Transição</title>
+  <title>Plataforma Lumen</title>
   <link rel="stylesheet" href="styles.css" />
   <link rel="stylesheet" href="nav.css" />
   <link rel="stylesheet" href="semiCirculo.css" />
@@ -33,7 +32,7 @@
         <a href="#sobre">Sobre</a>
         <a href="#servicos">Serviços</a>
         <a href="#tituloPlanos">Planos</a>
-        <a href="#testemunhas">Testemunhas</a>
+        <a href="#testemunhas">Feedbacks</a>
         <a href="#faq-section">FAQs</a>
       </div>
 
@@ -53,7 +52,7 @@
       <a href="#sobre">Sobre</a>
       <a href="#servicos">Serviços</a>
       <a href="#tituloPlanos">Planos</a>
-      <a href="#testemunhas">Testemunhas</a>
+      <a href="#testemunhas">Feedbacks</a>
       <a href="#faq-section">FAQs</a>
       <a class="nav-btn-mobile">Login</a>
     </div>
@@ -87,7 +86,7 @@
   </div>
 
   <main>
-      <section id="sobre">
+    <section id="sobre">
       <div id="cardsSobre">
         <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200" class="cardLinha">
           <div class="cardInfo-menor">
@@ -142,7 +141,7 @@
           </div>
         </div>
 
-        <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200"  class="cardLinha">
+        <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200" class="cardLinha">
           <div class="cardInfo-menor">
             <div class="cardicon">
               <div class="icon-eye">
@@ -186,10 +185,11 @@
     </section>
 
     <section id="servicos">
-      <h2 class="tituloServicos" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200">Essa é uma plataforma
+      <h2 class="tituloServicos" data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200">
+        Essa é uma plataforma
         indicada para</h2>
 
-      <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200"  id="containerServicos">
+      <div data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200" id="containerServicos">
         <div class="cardservico">
           <div class="cardicon">
             <div class="icon-box">
@@ -239,8 +239,9 @@
         </div>
       </div>
 
-      <h1 data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000" id="tituloPlanos">Escolha o Plano Ideal para Sua Necessidade</h1>
-      <div  id="containerPlanos">
+      <h1 data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1000" id="tituloPlanos">
+        Escolha o Plano Ideal para Sua Necessidade</h1>
+      <div id="containerPlanos">
         <div class="cardPlanos">
           <div class="icon-box-planos">
             <p>1</p>
@@ -255,7 +256,10 @@
             <li>Conformidade com a Lei 14.133</li>
           </ul>
 
-          <button class="btn-premium">Solicitar Acesso</button>
+          <a href="https://wa.me/5511999999999?text=Olá, gostaria de solicitar acesso ao plano Lumen Individual!"
+            target="_blank">
+            <button class="btn-premium">Solicitar Acesso</button>
+          </a>
         </div>
 
         <div class="cardPlanos">
@@ -272,7 +276,8 @@
             <li>Otimização do tempo, padronização, maior assertividade</li>
           </ul>
 
-          <a href="https://wa.me/5511958194668?text=Olá,%20quero%20mais%20informações20%sobre20%o20%plano20%Lumen20%Consultor!" target="_blank">
+          <a href="https://wa.me/5511999999999?text=Olá, gostaria de solicitar acesso ao plano Lumen Consultor!"
+            target="_blank">
             <button class="btn-premium">Solicitar Acesso</button>
           </a>
         </div>
@@ -290,8 +295,10 @@
             <li>Gestão para municípios ilimitados</li>
             <li>Consultoria inteligente, controle total e resultados ilimitados</li>
           </ul>
-
-          <button class="btn-premium">Solicitar Acesso</button>
+          <a href="https://wa.me/5511999999999?text=Olá, gostaria de solicitar acesso ao plano Lumen Prêmio!"
+            target="_blank">
+            <button class="btn-premium">Solicitar Acesso</button>
+          </a>
         </div>
 
         <div class="cardPlanos">
@@ -307,104 +314,181 @@
             <li>Gestão ilimitada</li>
             <li>Painéis integrados, usuários ilimitados, controle jurídico e financeiro, governança eficiente.</li>
           </ul>
-
-          <button class="btn-premium">Solicitar Acesso</button>
+          <a href="https://wa.me/5511999999999?text=Olá, gostaria de solicitar acesso ao plano Lumen Governança!"
+            target="_blank">
+            <button class="btn-premium">Solicitar Acesso</button>
+          </a>
         </div>
       </div>
     </section>
 
     <section id="testemunhas">
       <h1 class="tituloTestemunhas">Gestores que transformaram com a Lumen</h2>
-      <div  id="containerTestemunhas">
-        <div class="cardtestemunhas">
-          <div class="perfil">
-            <img src="src/img/foto2.jpg" alt="Foto de perfil" />
-            <div>
-              <div class="nome">Marina Souza <span class="estrela">★</span></div>
-              <div class="cargo">Controladora Interna – RJ</div>
+        <div id="containerTestemunhas">
+          <div class="cardtestemunhas">
+            <div class="perfil">
+              <img src="src/img/foto2.jpg" alt="Foto de perfil" />
+              <div>
+                <div class="nome">Marina Souza <span class="estrela">★</span></div>
+                <div class="cargo">Controladora Interna - RJ</div>
+              </div>
+            </div>
+            <div class="depoimento">
+              <span class="aspas">❝</span>
+              A LUMEN transformou nosso setor em um núcleo estratégico. Ganhamos agilidade, controle e segurança
+              jurídica em cada documento.
+              <span class="aspas">❞</span>
             </div>
           </div>
-          <div class="depoimento">
-            <span class="aspas">❝</span>
-            A LUMEN transformou nosso setor em um núcleo estratégico. Ganhamos agilidade, controle e segurança jurídica em cada documento.
-            <span class="aspas">❞</span>
+
+
+          <div class="cardtestemunhas">
+            <div class="perfil">
+              <img src="src/img/foto1.jpg" alt="Foto de perfil" />
+              <div>
+                <div class="nome">Rafael Lima <span class="estrela">★</span></div>
+                <div class="cargo">Controlador Interno - SP</div>
+              </div>
+            </div>
+            <div class="depoimento">
+              <span class="aspas">❝</span>
+              A Lumen revolucionou minha consultoria. A IA-LUX é precisa, e os módulos das Espadas organizam todo o
+              fluxo com clareza e controle.
+              <span class="aspas">❞</span>
+            </div>
+          </div>
+
+
+          <div class="cardtestemunhas">
+            <div class="perfil">
+              <img src="src/img/foto3.jpg" alt="Foto de perfil" />
+              <div>
+                <div class="nome">Juliana Castro <span class="estrela">★</span></div>
+                <div class="cargo">Secretária de Administração - MG</div>
+              </div>
+            </div>
+            <div class="depoimento">
+              <span class="aspas">❝</span>
+              Com a Lumen temos rastreabilidade total, documentos prontos em minutos e a tranquilidade de estar 100% em
+              conformidade com a nova lei
+              <span class="aspas">❞</span>
+            </div>
           </div>
         </div>
 
-
-        <div class="cardtestemunhas">
-          <div class="perfil">
-            <img src="src/img/foto1.jpg" alt="Foto de perfil" />
-            <div>
-              <div class="nome">Rafael Lima <span class="estrela">★</span></div>
-              <div class="cargo">Controlador Interno – SP</div>
-            </div>
-          </div>
-          <div class="depoimento">
-            <span class="aspas">❝</span>
-            A Lumen revolucionou minha consultoria. A IA-LUX é precisa, e os módulos das Espadas organizam todo o fluxo com clareza e controle.
-            <span class="aspas">❞</span>
-          </div>
-        </div>
-
-
-        <div class="cardtestemunhas">
-          <div class="perfil">
-            <img src="src/img/foto3.jpg" alt="Foto de perfil" />
-            <div>
-              <div class="nome">Juliana Castro <span class="estrela">★</span></div>
-              <div class="cargo">Secretária de Administração – MG</div>
-            </div>
-          </div>
-          <div class="depoimento">
-            <span class="aspas">❝</span>
-            Com a Lumen temos rastreabilidade total, documentos prontos em minutos e a tranquilidade de estar 100% em conformidade com a nova lei
-            <span class="aspas">❞</span>
-          </div>
-        </div>
-      </div>
-
-      <!--
+        <!--
       <div class="btnContainer">
         <button class="btnTestemunhas">Começar</button>
       </div>-->
-      
+
     </section>
 
     <section id="faq-section">
-    <div class="faq-container">
-      <h2 class="faq-title">Perguntas Frequentes</h2>
+      <div class="faq-container">
+        <h2 class="faq-title">Perguntas Frequentes</h2>
 
-      <div class="faq-item">
-        <button class="faq-question">
-          O que é a LUMEN?
-          <span class="faq-icon">+</span>
-        </button>
-        <div class="faq-answer">
-          A LUMEN é uma plataforma SaaS que transforma a gestão de contratações públicas municipais com automação, conformidade legal e inteligência artificial.
+        <div class="faq-item">
+          <button class="faq-question">
+            O que é a Lumen e como ela pode ajudar minha gestão pública?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            A Lumen é uma plataforma inteligente que automatiza processos, garante segurança jurídica e empodera o
+            servidor público com tecnologia de ponta, sem substituir seu protagonismo.
+          </div>
+        </div>
+
+
+        <div class="faq-item">
+          <button class="faq-question">
+            A Lumen substitui o trabalho do servidor público?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            Não. A Lumen não substitui o servidor. Ela protege com seu escudo e empodera com a força das espadas.
+            A IA-LUX orienta, valida juridicamente e automatiza as rotinas técnicas, mas a decisão final é sempre do
+            servidor.
+            A plataforma foi criada para fortalecer a atuação pública, não para substituí-la.
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <button class="faq-question">
+            Preciso instalar algum sistema?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            Não. A Lumen é 100% web, compatível com computadores, celulares e tablets.
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <button class="faq-question">
+            É necessário saber direito ou informática para usar a Lumen?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            Não. A plataforma é intuitiva, com tutoriais embutidos e IA explicável.
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <button class="faq-question">
+            A Lumen está de acordo com a Lei 14.133/2021?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            Sim. Todos os módulos são validados automaticamente com base na nova Lei de Licitações.
+          </div>
+        </div>
+
+
+        <div class="faq-item">
+          <button class="faq-question">
+            Como a IA-LUX funciona e quem toma a decisão final?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            A IA-LUX é treinada em legislação, jurisprudência e normas locais para orientar tecnicamente o servidor. Ela
+            emite pareceres, valida documentos e gera alertas com base nas normas vigentes.
+            No entanto, a decisão final é sempre do servidor público. A IA apenas apoia, nunca substitui.
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <button class="faq-question">
+            Posso testar antes de contratar?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            Sim. Disponibilizamos uma demonstração gratuita sob agendamento.
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <button class="faq-question">
+            A plataforma protege juridicamente o servidor público?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            Sim. A IA-LUX valida tecnicamente as decisões com base na legislação vigente, gera registros rastreáveis de
+            cada ação e fornece justificativas jurídicas. Isso reduz significativamente os riscos de responsabilização
+            do servidor, oferecendo mais segurança e respaldo em todo o processo.
+          </div>
+        </div>
+
+        <div class="faq-item">
+          <button class="faq-question">
+            A Lumen está de acordo com a LGPD? Os dados são seguros?
+            <span class="faq-icon">+</span>
+          </button>
+          <div class="faq-answer">
+            Sim. Todos os dados são tratados em conformidade com a Lei Geral de Proteção de Dados (LGPD), com
+            anonimização, controle de acesso por perfil e segurança criptografada. A plataforma garante rastreabilidade
+            e proteção total das informações.
+          </div>
         </div>
       </div>
-
-      <div class="faq-item">
-        <button class="faq-question">
-          A plataforma é segura juridicamente?
-          <span class="faq-icon">+</span>
-        </button>
-        <div class="faq-answer">
-          Sim. Todos os documentos gerados seguem os parâmetros da Lei 14.133/2021 e são auditáveis, com total rastreabilidade.
-        </div>
-      </div>
-
-      <div class="faq-item">
-        <button class="faq-question">
-          Como a IA-LUX atua no processo?
-          <span class="faq-icon">+</span>
-        </button>
-        <div class="faq-answer">
-          A IA-LUX analisa os dados e ajuda a gerar documentos e fluxos automáticos com precisão técnica e agilidade.
-        </div>
-      </div>
-    </div>
     </section>
 
 
@@ -419,15 +503,15 @@
       <div class="light-beam beam6"></div>
     </div>
   </main>
- 
 
 
-    <footer class="footer">
-      <a href="#hero">Inicio</a>
-      <a href="#sobre">Sobre</a>
-      <a href="#servicos">Serviços</a>
-      <a href="#team">FAQ</a>
-      <p>&copy; 2025 Lumen. Todos os direitos reservados.</p>
+
+  <footer class="footer">
+    <a href="#hero">Inicio</a>
+    <a href="#sobre">Sobre</a>
+    <a href="#servicos">Serviços</a>
+    <a href="#team">FAQ</a>
+    <p>&copy; 2025 Lumen. Todos os direitos reservados.</p>
   </footer>
 
   <script type="text/javascript" src="js/jquery-3.1.1.min.js"></script>
@@ -449,15 +533,15 @@
   </script>
 
   <script>
-   const faqItems = document.querySelectorAll('.faq-item');
+    const faqItems = document.querySelectorAll('.faq-item');
 
-  faqItems.forEach(item => {
-    const question = item.querySelector('.faq-question');
-    question.addEventListener('click', () => {
-      item.classList.toggle('open');
+    faqItems.forEach(item => {
+      const question = item.querySelector('.faq-question');
+      question.addEventListener('click', () => {
+        item.classList.toggle('open');
+      });
     });
-  });
-</script>
+  </script>
 </body>
 
 </html>
