--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
   </main>
 
   <!--FOOTER-->
-  <footer data-aos="fade-up" data-aos-anchor-placement="center-bottom" data-aos-duration="1200" class="footer">
+  <footer class="footer">
     <a href="#">Inicio</a>
     <a href="#sobre">Sobre</a>
     <a href="#servicos">Serviços</a>
